Fixed some alignment issues. " ""

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ img {
   width: 100%;
 }
 figcaption {
+  font-size: 20px;
   font-weight: 700;
   text-align: center;
   background-color: #222;
@@ -84,6 +85,7 @@ button:active {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 4em;
+    align-items: start;
   }
 }
 
